--- a/plugins/dynamix/styles/default-gray.css
+++ b/plugins/dynamix/styles/default-gray.css
@@ -32,10 +32,10 @@ input:hover[type=button],input:hover[type=reset],input:hover[type=submit],button
 input:active[type=button],input:active[type=reset],input:active[type=submit],button:active,button:active[type=button],a.button:active{border-color:#0072c6;box-shadow:none}
 input[disabled],button[disabled],input:hover[type=button][disabled],input:hover[type=reset][disabled],input:hover[type=submit][disabled],button:hover[disabled],button:hover[type=button][disabled],input:active[type=button][disabled],input:active[type=reset][disabled],input:active[type=submit][disabled],button:active[disabled],button:active[type=button][disabled],textarea[disabled]{color:#808080;border-color:#808080;background:#383a34;opacity:0.3;cursor:default}
 input::-webkit-input-placeholder{color:#00529b}
-select{font-family:clear-sans;font-size:1.3rem;min-width:188px;max-width:326px;padding:6px 6px;margin:0 10px 0 0;border:#606e7f 1px solid;box-shadow:none;border-radius:0;color:#606e7f;background:transparent;outline:none;display:inline-block;cursor:pointer}
+select{-webkit-appearance:none;font-family:clear-sans;font-size:1.3rem;min-width:188px;max-width:326px;padding:6px 6px;margin:0 10px 0 0;border:#606e7f 1px solid;box-shadow:none;border-radius:0;color:#606e7f;background-color:transparent;background-image:linear-gradient(45deg, transparent 50%, #606e7f 50%),linear-gradient(135deg, #606e7f 50%, transparent 50%);background-position:calc(100% - 1.3rem) 1.1rem,calc(100% - .8rem) 1.1rem;background-size:.5rem .6rem,.5rem .6rem;background-repeat:no-repeat;outline:none;display:inline-block;cursor:pointer}
 select option{color:#606e7f;background-color:#121510}
 select:focus{border-color:#0072c6}
-select[disabled]{color:#808080;border-color:#808080;background:#383a34;opacity:0.3;cursor:default}
+select[disabled]{color:#808080;border-color:#808080;background-color:#383a34;opacity:0.3;cursor:default}
 select[name=enter_view]{padding:0;float:right}
 select[name=enter_share]{padding:0;float:right}
 select.narrow{min-width:87px}
