Added customizable header background color

--- a/plugins/dynamix/DisplaySettings.page
+++ b/plugins/dynamix/DisplaySettings.page
@@ -23,7 +23,7 @@ $icon = "<i class='fa fa-trash top' title='Restore default image' onclick='resto
 
 <style>
 span#dropbox{margin-right:20px;}
-i.top{position:absolute;padding-left:4px;cursor:pointer;}
+i.top{position:relative;padding-left:4px;cursor:pointer;}
 </style>
 
 <script src="<?autov('/webGui/javascript/jquery.filedrop.js')?>"></script>
@@ -211,6 +211,16 @@ Show array utilization indicator:
   <?=mk_option($display['usage'], "1", "Yes")?>
   </select>
 
+Header custom text color:
+: <input type="text" class="narrow" name="header" value="<?=$display['header']?>" maxlength="6" pattern="[0-9a-fA-F]{3,6}" title="HTML color code of 3 or 6 hexadecimal digits">
+
+> Overrule the default text color in the header. This can be used to match the text color with a background image.
+
+Header custom background color:
+: <input type="text" class="narrow" name="background" value="<?=$display['background']?>" maxlength="6" pattern="[0-9a-fA-F]{3,6}" title="HTML color code of 3 or 6 hexadecimal digits">
+
+> Overrule the default background color in the header. This can be used to match the background color with a custom text color.
+
 Show banner:
 : <select name="banner" size="1" onchange="presetBanner(this.form)">
   <?=mk_option($display['banner'], "", "No")?>
@@ -230,11 +240,6 @@ Custom banner:
 </div>
 
 > Image will be scaled to 1920x90 pixels. The maximum image file upload size is 512 kB (524,288 bytes).
-
-Custom header text color:
-: <input type="text" class="narrow" name="header" value="<?=$display['header']?>" maxlength="6" pattern="[0-9a-fA-F]{3,6}" title="HTML color code of 3 or 6 hexadecimal digits">
-
-> Overrule the default text color in the header. This may be used to match text color with a background image.
 
 Show Dashboard apps:
 : <select name="dashapps" size="1">
