--- a/plugins/dynamix/styles/dynamix-gray.css
+++ b/plugins/dynamix/styles/dynamix-gray.css
@@ -16,13 +16,13 @@ div.jGrowl div.jGrowl-closer{width:400px;color:#808080;background-color:#121510;
 div.jGrowl div.jGrowl-closer.top{position:fixed;top:91px}
 @media print{div.jGrowl{display:none}}
 .ui-dropdownchecklist{background-color:transparent;background-image:linear-gradient(66.6deg, transparent 60%, #606e7f 40%),linear-gradient(113.4deg, #606e7f 40%, transparent 60%);background-position:calc(100% - 8px),calc(100% - 4px);background-size:4px 6px,4px 6px;background-repeat:no-repeat;border:none;box-shadow:0 1px 0 #606E7F;outline:none;height:3rem;line-height:3rem;cursor:pointer}
-.ui-dropdownchecklist-selector{border:1px solid #606E7F;display:inline-block;cursor:pointer;padding:1px 9px 1px 11px}
-.ui-dropdownchecklist-group{font-weight:normal;font-style:italic;padding:1px 9px 1px 11px}
+.ui-dropdownchecklist-selector{border:1px solid #606E7F;display:inline-block;cursor:pointer;padding:1px 6px}
+.ui-dropdownchecklist-group{font-weight:normal;font-style:italic;padding:1px 6px}
 .ui-dropdownchecklist-selector-wrapper{vertical-align:middle;font-size:0}
 .ui-state-active{border-color:#0072C6;background:transparent}
 .ui-dropdownchecklist-dropcontainer{color:#606E7F;background-color:#121510;border:#0072C6 1px solid}
 .ui-state-disabled{border-color:#808080;background:#383A34;opacity:0.3}
-.ui-dropdownchecklist-indent{padding-left:7px}
+.ui-dropdownchecklist-indent{padding-left:9px}
 .ui-dropdownchecklist-text{font-family:clear-sans;font-size:1.2rem;color:#606E7F}
 .ui-dropdownchecklist-item{height:2.2rem;line-height:2.2rem}
 .ui-dropdownchecklist-item input{vertical-align:top}
