--- a/plugins/dynamix/Syslinux.page
+++ b/plugins/dynamix/Syslinux.page
@@ -42,15 +42,15 @@ switch ($display['theme']) {
 case 'gray':
 case 'azure':
   echo "span.array,span.system{margin-left:33.33%;width:65.5%;padding:2px 10px;font-weight:bold;border:solid 1px #606E7F;border-bottom:none}\n";
-  echo "textarea.menu{margin-left:33.33%;width:65.5%;margin-bottom:12px;font-family:bitstream;resize:none;border-top:none}\n";
+  echo "textarea.menu{margin-left:33.33%;width:65.5%;margin-bottom:12px;padding:4px 10px;font-family:bitstream;resize:none;border-top:none}\n";
   break;
 case 'white':
   echo "span.array,span.system{margin-left:33.33%;width:65.5%;padding:2px 10px;font-weight:bold;border:solid 1px #1c1c1c;border-bottom:none}\n";
-  echo "textarea.menu{margin-left:33.33%;width:65.5%;margin-bottom:12px;font-family:bitstream;resize:none;border-top:none}\n";
+  echo "textarea.menu{margin-left:33.33%;width:65.5%;margin-bottom:12px;padding:4px 10px;font-family:bitstream;resize:none;border:1px solid #1c1b1b;border-top:none}\n";
   break;
 case 'black':
   echo "span.array,span.system{margin-left:33.33%;width:65.5%;padding:2px 10px;font-weight:bold;border:solid 1px #f2f2f2;border-bottom:none}\n";
-  echo "textarea.menu{margin-left:33.33%;width:65.5%;margin-bottom:12px;font-family:bitstream;resize:none;border-top:none}\n";
+  echo "textarea.menu{margin-left:33.33%;width:65.5%;margin-bottom:12px;padding:4px 10px;font-family:bitstream;resize:none;border:1px solid #f2f2f2;border-top:none}\n";
   break;
 }
 ?>
@@ -204,12 +204,12 @@ $(function(){
 <input type="hidden" name="#command" value="/webGui/scripts/bootmode">
 <input type="hidden" name="#arg[1]" value="">
 <input type="hidden" name="text" value="">
-<div markdown="1" class="basic">
+<div markdown="1" class="advanced">
 Syslinux configuration:
 : <textarea class="text" name="basic" spellcheck="false" cols="80" rows="<?=substr_count($current,"\n")+1?>" maxlength="2048" style="resize:none;font-family:bitstream;width:65.5%"><?=$current?></textarea>
 
 </div>
-<div markdown="1" class="advanced">
+<div markdown="1" class="basic">
 Syslinux configuration:
 : <?$i=0;
   foreach (array_map('strip',explode($mark,$current)) as $area):
