--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -42,7 +42,7 @@ select.narrow{min-width:87px}
 select.auto{min-width:auto}
 select.slot{min-width:44rem;max-width:44rem}
 input.narrow{width:174px}
-input.trim{min-width:74px}
+input.trim{width:74px;min-width:74px}
 form+p{display:none}
 #header{position:fixed;top:0;left:0;width:100%;height:90px;z-index:100;margin:0;background-color:#edeaef;background-size:100% 90px;background-repeat:no-repeat;border-bottom:#9794a0 1px solid}
 #header .logo{float:left;margin-left:75px;color:#e22828;width:160px;text-align:center}
