--- a/plugins/dynamix/styles/default-black.css
+++ b/plugins/dynamix/styles/default-black.css
@@ -42,7 +42,7 @@ select.narrow{min-width:76px}
 select.auto{min-width:auto}
 select.slot{min-width:44rem;max-width:44rem}
 input.narrow{width:166px}
-input.trim{min-width:76px}
+input.trim{width:76px;min-width:76px}
 #header{position:absolute;top:0;left:0;width:100%;height:91px;z-index:100;margin:0;color:#1c1b1b;background:#f2f2f2;background-size:100% 90px;background-repeat:no-repeat}
 #header .logo{float:left;margin-left:10px;color:#e22828;width:160px;text-align:center}
 #header .logo svg{width:160px;display:block;margin:25px 50px 8px 0}
