--- a/plugins/dynamix/ShareList.page
+++ b/plugins/dynamix/ShareList.page
@@ -19,12 +19,12 @@ Cond="$var['fsState']!='Stopped' && $var['shareUser']=='e'"
 function displayShares(all) {
   if (all == 'yes') {
     $.cookie('ssz','ssz',{path:'/'});
-    $('#share_list').html("<tr><td colspan='8'><div class='spinner'></div></td></tr>");
+    $('#shareslist').html("<tr><td colspan='8'><div class='spinner'></div></td></tr>");
     $('div.spinner').html(unraid_logo);
   }
   $.get('/webGui/include/ShareList.php',{compute:all,path:'<?=addslashes(htmlspecialchars($path))?>',scale:'<?=$display['scale']?>',number:'<?=$display['number']?>',fill:$.cookie('ssz')},function(data){
     $.removeCookie('ssz',{path:'/'})
-    $('#share_list').html(data);
+    $('#shareslist').html(data);
     $('#compute-shares').prop('disabled',!data || data.indexOf('colspan=')!=-1);
   });
 }
@@ -35,7 +35,7 @@ $(function() {
 
 <table class="share_status share wide">
 <thead><tr><td style="width:15%">Name</td><td style="width:33%">Comment</td><td>SMB</td><td>NFS</td><td>AFP</td><td>Size</td><td>Free</td><td>View</td></tr></thead>
-<tbody id="share_list"></tbody>
+<tbody id="shareslist"></tbody>
 </table>
 <p><form name="share_form" method="POST" action="<?=htmlspecialchars($path)?>/Share?name=">
 <input id="compute-shares" type="button" value="Compute All" onclick="$(this).prop('disabled',true);displayShares('yes')">
