--- a/plugins/dynamix.vm.manager/VMSettings.page
+++ b/plugins/dynamix.vm.manager/VMSettings.page
@@ -217,8 +217,11 @@ VFIO allow unsafe interrupts:
   <?= mk_option($vfio_allow_unsafe, '1', 'Yes'); ?>
   </select><?if($safemode):?><span>*Setting disabled in **safe mode***</span><?endif;?>
 
-> Warning: Use of this setting could cause possible data corruption with certain hardware configurations. Please visit the Lime Technology forums for more information.
+> If your system doesn't support interrupt remapping, these can be enabled by allowing unsafe interrupts.<br>
 > A reboot will be required for changes to this setting to take affect.
+>
+> **Warning: use of this setting could cause possible data corruption with certain hardware configurations.**
+> Please visit the [Lime Technology forums](https://forums.unraid.net/forum/51-vm-engine-kvm) for more information.
 
 </div>
 <?if (file_exists("/var/log/libvirt/libvirtd.log")):?>
