--- a/plugins/dynamix/Vars.page
+++ b/plugins/dynamix/Vars.page
@@ -32,7 +32,7 @@ $pages['Vars']['text'] = '...';
 $text = '...';
 ksort($site);
 ksort($GLOBALS);
-if (isset($GLOBALS[_SERVER][PHP_AUTH_PW])) $GLOBALS[_SERVER][PHP_AUTH_PW]="***";
+if (isset($GLOBALS['_SERVER']['PHP_AUTH_PW'])) $GLOBALS['_SERVER']['PHP_AUTH_PW'] = "***";
 echo ($display['resize'] ? "<pre class='up' style='display:none'>" : "<pre class='up'>").htmlspecialchars(print_r($GLOBALS,true))."</pre>";
 ?>
 <input type="button" value="Done" onclick="done()">
