--- a/plugins/dynamix/Diagnostics.page
+++ b/plugins/dynamix/Diagnostics.page
@@ -1,10 +1,11 @@
 Menu="UNRAID-OS"
 Title="Diagnostics"
-Tag="address-card-o"
+Icon="icon-diagnostics"
+Tag="tv"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
