--- a/plugins/dynamix/Eth0.page
+++ b/plugins/dynamix/Eth0.page
@@ -1,6 +1,6 @@
 Menu="NetworkSettings:100"
 Title="Interface eth0"
-Tag="tag"
+Tag="icon-ethernet"
 ---
 <?PHP
 /* Copyright 2005-2018, Lime Technology
