--- a/plugins/dynamix/LogButton.page
+++ b/plugins/dynamix/LogButton.page
@@ -1,11 +1,11 @@
 Menu="Buttons"
 Title="Log"
-Icon="file-text-o"
-Code="f14b"
+Icon="icon-u-log"
+Code="e936"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
