--- a/plugins/dynamix/Notifications.page
+++ b/plugins/dynamix/Notifications.page
@@ -1,7 +1,7 @@
 Menu="UserPreferences"
 Type="xmenu"
 Title="Notification Settings"
-Icon="notifications.png"
+Icon="icon-notifications"
 Tag="phone-square"
 ---
 <?PHP
