--- a/plugins/dynamix/NotificationsArchive.page
+++ b/plugins/dynamix/NotificationsArchive.page
@@ -1,6 +1,7 @@
 Menu="UNRAID-OS"
 Title="Archived Notifications"
-Tag="list"
+Icon="icon-archive"
+Tag="archive"
 ---
 <?PHP
 /* Copyright 2005-2018, Lime Technology
