--- a/plugins/dynamix/Registration.page
+++ b/plugins/dynamix/Registration.page
@@ -1,10 +1,11 @@
 Menu="About"
 Type="xmenu"
 Title="Registration"
-Tag="flag"
+Icon="icon-registration"
+Tag="pencil"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
+/* Copyright 2005-2018, Lime Technology
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
