--- a/plugins/dynamix/SysDevs.page
+++ b/plugins/dynamix/SysDevs.page
@@ -1,6 +1,7 @@
 Menu="UNRAID-OS"
 Title="System Devices"
-Tag="list"
+Icon="icon-hardware"
+Tag="server"
 ---
 <?PHP
 /* Copyright 2005-2018, Lime Technology
@@ -15,7 +16,7 @@ Tag="list"
  */
 ?>
 <style>
-table.pre{margin-top:0}
+table.pre{margin-top:0;background:transparent}
 table.pre td:first-child{width:144px}
 table tr td{padding:0 0 3px 0;margin:0}
 table tr td.thin{line-height:8px;height:8px}
