--- a/plugins/dynamix/TerminalButton.page
+++ b/plugins/dynamix/TerminalButton.page
@@ -1,12 +1,12 @@
 Menu="Buttons:2"
 Title="Terminal"
-Icon="terminal"
+Icon="icon-u-terminal"
 Href="/webterminal/"
-Code="f120"
+Code="e93f"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
