--- a/plugins/dynamix/DiskList.page
+++ b/plugins/dynamix/DiskList.page
@@ -33,7 +33,7 @@ $(function() {
 });
 </script>
 
-<table class="share_status share wide">
+<table class="share_status share">
 <thead><tr><td style="width:15%">Name</td><td style="width:33%">Comment</td><td>SMB</td><td>NFS</td><td>AFP</td><td>Size</td><td>Free</td><td>View</td></tr></thead>
 <tbody id="disk_list"></tbody>
 </table>
@@ -41,9 +41,9 @@ $(function() {
 
 > **Colored Status Indicator** -- the significance of the color indicator at the beginning of each line in *Disk Shares* is as follows:
 >
-> <img src='/webGui/images/green-on.png' class='icon'>Mounted, underlying device has redundancy/protection.
+> <i class='fa fa-circle orb green-orb'></i>Mounted, underlying device has redundancy/protection.
 >
-> <img src='/webGui/images/yellow-on.png' class='icon'>Mounted, underlying device does not have redundancy/protection.
+> <i class='fa fa-warning orb yellow-orb'></i>Mounted, underlying device does not have redundancy/protection.
 >
 > **Security modes:**
 
