--- a/plugins/dynamix/ShareList.page
+++ b/plugins/dynamix/ShareList.page
@@ -33,7 +33,7 @@ $(function() {
 });
 </script>
 
-<table class="share_status share wide">
+<table class="share_status share">
 <thead><tr><td style="width:15%">Name</td><td style="width:33%">Comment</td><td>SMB</td><td>NFS</td><td>AFP</td><td>Size</td><td>Free</td><td>View</td></tr></thead>
 <tbody id="shareslist"></tbody>
 </table>
@@ -48,9 +48,9 @@ $(function() {
 
 > **Colored Status Indicator** -- the significance of the color indicator at the beginning of each line in *User Shares* is as follows:
 >
-> <img src="/webGui/images/green-on.png" class="icon">All files are on protected storage.
+> <i class='fa fa-circle orb green-orb'></i>All files are on protected storage.
 >
-> <img src="/webGui/images/yellow-on.png" class="icon">Some or all files are on unprotected storage.
+> <i class='fa fa-warning orb yellow-orb'></i>Some or all files are on unprotected storage.
 >
 > **Security modes:**
 
