--- a/plugins/dynamix/ArrayDevices.page
+++ b/plugins/dynamix/ArrayDevices.page
@@ -3,8 +3,8 @@ Title="Array Devices"
 Tag="database"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -80,17 +80,17 @@ if ($display['total']) echo "<tr class='tr_last'><td colspan='11'>&nbsp;</td></t
 
 > **Colored Status Indicator** the significance of the color indicator at the beginning of each line in *Array Devices* is as follows:
 >
-> <img src='/webGui/images/green-on.png' class='icon'>Normal operation, device is active.
+> <i class='fa fa-circle orb green-orb'></i>Normal operation, device is active.
 >
-> <img src='/webGui/images/green-blink.png' class='icon'>Device is in standby mode (spun-down).
+> <i class='fa fa-circle orb grey-orb'></i>Device is in standby mode (spun-down).
 >
-> <img src='/webGui/images/yellow-on.png' class='icon'>Device contents emulated.
+> <i class='fa fa-warning orb yellow-orb'></i>Device contents emulated.
 >
-> <img src='/webGui/images/red-on.png' class='icon'>Device is disabled, contents emulated.
+> <i class='fa fa-times orb red-orb'></i>Device is disabled, contents emulated.
 >
-> <img src='/webGui/images/blue-on.png' class='icon'>New device.
+> <i class='fa fa-square orb blue-orb'></i>New device.
 >
-> <img src='/webGui/images/grey-off.png' class='icon'>No device present, position is empty.
+> <i class='fa fa-square orb grey-orb'></i>No device present, position is empty.
 >
 > **Identification** is the *signature* that uniquely identifies a storage device. The signature
 > includes the device model number, serial number, linux device id, and the device size.
